Fixed UX problem with "plus" icon on visibility options. Improved sass file.

--- a/css/cs.css
+++ b/css/cs.css
@@ -200,16 +200,16 @@
   padding-right: 20px;
 }
 .widgets-php .custom-sidebars-wp-checkup {
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
   border-radius: 4px;
+  -ms-flex-align: center;
   align-items: center;
   background: #fff url(../img/heart.png) no-repeat 0 50%;
   border: 0;
+  display: -ms-flexbox;
   display: flex;
   min-height: 100px;
   padding-left: 135px;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 .widgets-php .custom-sidebars-wp-checkup form {
@@ -217,9 +217,6 @@
 }
 .widgets-php .custom-sidebars-wp-checkup form input {
   border: 0;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
   border-radius: 4px;
 }
 .widgets-php .custom-sidebars-wp-checkup form input[type=text] {
@@ -240,9 +237,6 @@
   color: #840006;
 }
 .widgets-php .sidebars-column-1 .inner .custom-sidebars-upfront {
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
   border-radius: 4px;
   background-color: #f9c200;
   margin: 55px 0 16px 0;
@@ -606,9 +600,6 @@ body.appearance_page_customsidebars #poststuff h2 {
   opacity: .75;
   line-height: 26px;
   margin-right: 5px;
-  -webkit-transition: opacity .2s;
-  -moz-transition: opacity .2s;
-  -o-transition: opacity .2s;
   transition: opacity .2s;
 }
 
