--- a/css/src/cs-visibility.scss
+++ b/css/src/cs-visibility.scss
@@ -26,142 +26,132 @@
 	border-right: 0;
 	padding: 12px 15px 0;
 	background: #FAFAFA;
-}
 
-.csb-visibility-inner .toggle-action {
-	display: block;
-	margin: -15px -15px 0;
-	padding: 15px 15px 0;
-	cursor: pointer;
-	border: 0;
-	/*color: #0074A2;*/
-}
+	.toggle-action {
+		display: block;
+		margin: -15px -15px 0;
+		padding: 15px 15px 0;
+		cursor: pointer;
+		border: 0;
+		/*color: #0074A2;*/
+	}
 
-.csb-visibility-inner .csb-option-row:hover {
-	background: #F4F4F4;
-	/*color: #2EA2CC;*/
-}
+	.csb-option-row {
+		&:hover {
+			background: #F4F4F4;
+			&.csb-always {
+				&:hover {
+					background: transparent;
+				}
+			}
+		}
+		&.csb-action {
+			.action {
+				top: 15px;
+			}
+		}
+		.clear-filter {
+			&:hover {
+				color: #C00;
+			}
+		}
+		.action {
+			position: absolute;
+			right: 15px;
+			top: 7px;
+			z-index: 1;
+			color: #AAA;
+			cursor: pointer;
+			font-size: 20px;
+			&:hover {
+				color: #000;
+			}
+		}
+	}
 
-.csb-visibility-inner .csb-action {
-	margin-bottom: 0;
-}
-.csb-visibility-inner .csb-action label {
-	cursor: default;
-}
+	.csb-action {
+		margin-bottom: 0;
+		label {
+			cursor: default;
+		}
+		b {
+			padding: 5px;
+			border: 1px solid transparent;
+			cursor: pointer;
+			margin-left: -6px;
+		}
+		&:hover b {
+			padding: 5px;
+			background: #FFF;
+			border: 1px solid #DDD;
+		}
+	}
 
-.csb-visibility-inner .csb-action b {
-	padding: 5px;
-	border: 1px solid transparent;
-	cursor: pointer;
-	margin-left: -6px;
-}
+	.csb-always {
+		padding-bottom: 0;
+		text-align: center;
+		font-style: italic;
+		label {
+			margin-bottom: 0;
+			color: #AAA;
+			cursor: default;
+		}
+	}
 
-.csb-visibility-inner .csb-action:hover b {
-	padding: 5px;
-	background: #FFF;
-	border: 1px solid #DDD;
-}
+	.csb-and {
+		margin-right: 10px;
+		font-weight: bold;
+	}
 
-.csb-visibility-inner .csb-always {
-	padding-bottom: 0;
-	text-align: center;
-	font-style: italic;
-}
+	label {
+		display: block;
+		border-top: 1px solid #E8E8E8;
+		margin: 0 -15px 5px;
+		padding: 5px 15px;
+	}
 
-.csb-visibility-inner .csb-always label {
-	margin-bottom: 0;
-	color: #AAA;
-	cursor: default;
-}
+	.csb-detail-row {
+		label {
+			border: 0;
+			margin-bottom: 0;
+			padding-bottom: 0;
+		}
+		.detail {
+			margin-top: 10px;
+		}
+	}
 
-.csb-visibility-inner .csb-option-row.csb-always:hover {
-	background: transparent;
-}
+	.chosen-container {
+		display: block !important;
+		width: 100% !important;
+	}
 
-.csb-visibility-inner .csb-and {
-	margin-right: 10px;
-	font-weight: bold;
-}
+	.dropdown {
+		position: absolute;
+		z-index: 2;
+		background: #FFF;
+		border: 1px solid #DDD;
+		right: 10px;
+		top: 20px;
+		color: #555;
+		box-shadow: 0 1px 10px rgba(0,0,0,0.15);
+		li {
+			padding: 5px 15px;
+			cursor: pointer;
+			margin: 0;
+			&:hover {
+				color: #000;
+				background: #EEE;
+			}
+			&.csb-group,
+			&.csb-group:hover {
+				color: #999;
+				font-weight: bold;
+				background: #F8F8F8;
+				padding-left: 5px;
+				cursor: default;
+			}
+		}
+	}
 
-.csb-visibility-inner label {
-	display: block;
-	border-top: 1px solid #E8E8E8;
-	margin: 0 -15px 5px;
-	padding: 5px 15px;
-}
-
-.csb-visibility-inner .csb-detail-row label {
-	border: 0;
-	margin-bottom: 0;
-	padding-bottom: 0;
-}
-
-.csb-visibility-inner .csb-detail-row .detail {
-	margin-top: 10px;
-}
-
-.csb-visibility-inner .chosen-container {
-	display: block !important;
-	width: 100% !important;
-}
-
-.csb-visibility-inner .csb-option-row .action {
-	position: absolute;
-	right: 15px;
-	top: 7px;
-	z-index: 1;
-	color: #AAA;
-	cursor: pointer;
-	font-size: 20px;
-}
-
-.csb-visibility-inner .csb-option-row .action:hover {
-	color: #000;
-}
-
-.csb-visibility-inner .csb-option-row.csb-action .action {
-	top: 15px;
-}
-
-.csb-visibility-inner .csb-option-row .clear-filter:hover {
-	color: #C00;
-}
-
-.csb-visibility-inner .csb-option-row .show-on-hover {
-	opacity: 0
-}
-
-.csb-visibility-inner .csb-option-row:hover .show-on-hover {
-	opacity: 1;
-}
-
-.csb-visibility-inner .dropdown {
-	position: absolute;
-	z-index: 2;
-	background: #FFF;
-	border: 1px solid #DDD;
-	right: 10px;
-	top: 20px;
-	color: #555;
-	box-shadow: 0 1px 10px rgba(0,0,0,0.15);
-}
-
-.csb-visibility-inner .dropdown li {
-	padding: 5px 15px;
-	cursor: pointer;
-	margin: 0;
-}
-
-.csb-visibility-inner .dropdown li:hover {
-	color: #000;
-	background: #EEE;
-}
-
-.csb-visibility-inner .dropdown li.csb-group,
-.csb-visibility-inner .dropdown li.csb-group:hover {
-	color: #999;
-	font-weight: bold;
-	background: #F8F8F8;
-	padding-left: 5px;
-	cursor: default;
 }
